                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 01-03-2006 added: ListItem.Genre, ListItem.Director, ListItem.Year, ListItem.Title now work for Videos.
 - 01-03-2006 fixed: IMDb lookup stripping of filenames wasn't as good as it could be.
 - 01-03-2006 fixed: Lookup via a .nfo file on a folder would not set the folder icon.
 - 01-03-2006 changed: file browser, added "Add network location..." to strings.xml
 - 01-03-2006 fixed: overlay icon was not serialized to disc
 - 01-03-2006 fixed: HTMLScraper.dll couldn't handle "Monty Python and the Holy Grail" plot info, due to a coded tag on the IMDb.com page.
 - 01-03-2006 changed: Music and Video overlays are closed/open before we render the screen (allows vis on music overlay among other things)
 - 01-03-2006 changed: Video database retrieves the real path, and thumbs are set based on that.  IMDb thumbs are now only used if a file or folder thumb isn't present.
 - 01-03-2006 added: delete single bookmark in video osd.
 - 01-03-2006 added: overlay to indicate that a movie is watched in database views (overlaywatched.png). you can now choose.
 - 01-03-2006 fixed: rar-compressed trainers.
 - 01-03-2006 fixed: issue with rar volumes starting with .001.
 - 01-03-2006 fixed: IMDb lookups weren't matched correctly from My Files so were looked up again unnecessarily.
 - 28-02-2006 fixed: Mouse didn't reset the idle timer.
 - 28-02-2006 added: Controlgroup focus is now saved on window exit.
 - 28-02-2006 fixed: Actions could be sent to modal dialogs that were animating out.
 - 28-02-2006 fixed: Blank bookmark for resume time was shown in bookmarks.
 - 28-02-2006 fixed: [ 1438714 ] @-sign causes 'Invalid computer name'